# chatsune

./: .env.example  .gitignore  .tmuxp.yaml  README.md  compose.auth.yaml  compose.profiles.yaml  compose.yaml  devenv.nix  pyproject.toml
.scratch/: CRITICAL_RULES.md  REPO_RULES.md
.scratch/projects/001-initial-concepting/: ASSUMPTIONS.md  CHATSUNE_CONCEPT.md  CONTEXT.md  INITIAL_CONCEPT.md  PLAN.md  PROGRESS.md
.scratch/projects/002-initial-implementation/: ASSUMPTIONS.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md
.scratch/projects/003-config-strategy/: ASSUMPTIONS.md  CONFIG_SECRETS_IMPLEMENTATION_PLAN.md  CONTEXT.md  DECISIONS.md  ISSUES.md  PLAN.md  PROGRESS.md  configuration_secrets_strategy.md
.scratch/projects/004-review/: REVIEW_REVIEW.md  (+2 more)
.scratch/skills/: devenv-skill.md  e2e-live-verification.md  e2e-neovim-testing.md
config/: server-config.example.yaml
config/chat-templates/: function-calling.jinja
config/models/: llama.env  mistral.env  qwen3.env
docs/: architecture.md  configuration.md  migration-from-reference.md  operations.md  security.md
examples/basic/: README.md
examples/lora/: README.md
examples/static-assets/: README.md
examples/userspace-networking/: README.md
images/tailscale/: Dockerfile
images/vllm/: Dockerfile
scripts/: adapter_manager.py  smoke_test.py
src/chatsune/: __init__.py  bootstrap.py  cli.py  config.py  config_loader.py  diagnostics.py  redaction.py
tests/smoke/: test_layout.py
tests/unit/: test_bootstrap.py  test_cli.py  test_config.py  test_config_loader.py  test_policy_contract.py
(+6 files in other folders)
