[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatsune"
version = "0.1.0"
description = "Standalone private vLLM + Tailscale runtime helpers"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
chatsune = "chatsune.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
